# E-ink-Map-Tiles

./: .gitignore  CHANGELOG.md  EinkMapTiles-linux.spec  EinkMapTiles.spec  InkHUDBuilder.spec  LICENSE  NOTICE.md  README-firmware-builder.md  README.md  launch.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-release.yml
docs/: app.js  index.html  styles.css
scripts/: build-windows-exe.ps1  build_inkhud_firmware.py  build_inkhud_gui.py  eink_map_tiles_app.py
src/eink_map_tiles/: __init__.py  cli.py  core.py  desktop_app.py  local_app.py
tests/: test_tile_math.py
