[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "eink-map-tiles"
version = "1.0.0"
description = "Generate Meshtastic-ready offline map tiles for e-ink and low-memory displays."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "mapbox-vector-tile>=2.2",
  "Pillow>=10.4",
]

[project.scripts]
eink-map-tiles = "eink_map_tiles.cli:main"
eink-map-tiles-app = "eink_map_tiles.desktop_app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
